Fixed white gap under footer

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 body {
     font-family:"Pragati Narrow";
-    margin:0;
+    margin:0 0 0 0;
+}
+
+section {
+    min-height: -00vh; /* minus the height of the footer */
 }
 
 .maxSize {
@@ -591,6 +595,7 @@ label {
     justify-content:center;
     height:180px;
     margin-top:-20px;
+    margin-bottom:-40px;
     z-index:0;
 }
 
